@@ -1,5 +1,6 @@
 2014-XX-YY Release 0.1.9
 	- new filter: -fcontains
+	- DB version 10: storing makedepends
 
 2014-07-12 Release 0.1.8
 	- integrity checks now honor replacement packages
