@@ -1,3 +1,11 @@
+2014-10-06 Blub
+
+	* - DB version 10: makedepends
+
+2014-10-01 Blub
+
+	* pkgdepdb namespace; header split; cleanups
+
 2014-08-28 Blub
 
 	* -fcontains
